# ggrsc

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
cmake/: FindRust.cmake
src/: lib.rs  socket.rs
