[package]
name = "ggrsc"
version = "0.1.0"
edition = "2021"
authors = ["Marcello Haddeman <haddemanmarcello@gmail.com>"]
license = "MIT"

[dependencies]
ggrs = "0.10"
rmp-serde = "1.3"

[lib]
name = "ggrsc"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.26"

[features]
default = ["c_socket"]
c_socket = []
